--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "notiwind": "^2.0.2",
     "pinia": "^2.1.7",
     "vee-validate": "^4.12.2",
     "vue": "^3.3.4",
@@ -26,10 +27,13 @@
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.32",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.0",
     "vite": "^4.4.11",
     "vitest": "^0.34.6"
   }
