--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^3.3.4",
     "vue-chartjs": "^5.3.0",
     "vue-multiselect": "^2.1.6",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-simple-context-menu": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
