--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # VITE_API_URL = http://127.0.0.1:8000
 
-# VITE_API_URL = http://192.168.100.164:8000
+VITE_API_URL = http://64.227.168.246:8011
 
-VITE_API_URL = http://devapi.billionbuild.com 
+# VITE_API_URL = http://devapi.billionbuild.com
 
 # VITE_API_URL = http://192.168.245.94:8000
 
