--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "date-fns": "^3.0.6",
     "notiwind": "^2.0.2",
     "pinia": "^2.1.7",
+    "v-calendar": "^3.1.2",
     "vee-validate": "^4.12.2",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.3.0",
