add setting page table font issue solve

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 # VITE_API_URL = http://64.227.168.246:8011
 
-VITE_API_URL = http://devapi.billionbuild.com
+VITE_API_URL = https://devapi.billionbuild.com
 
 # VITE_API_URL = http://192.168.245.94:8000
 
